--- a/Views/Auth/Index.cshtml
+++ b/Views/Auth/Index.cshtml
@@ -3,6 +3,9 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout_auth.cshtml";
 }
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 <script>
     $(document).ready(function () {
         $('#showSignup').click(function (e) {
@@ -32,6 +35,35 @@
         $('#datepicker').datepicker({
             format: 'dd/mm/yyyy', // Specify the desired date format
             autoclose: true // Close the datepicker when a date is selected
+        });
+
+        $('#register_tinhtt').change(function () {
+            let selectedTinh = $(this).val();
+            $.ajax({
+                url: "/Auth/GetHuyen",
+                type: "POST",
+                data: JSON.stringify({
+                    tinhID: selectedTinh
+                }),
+                contentType: "application/json;charset=utf-8",
+                success: function (response) {
+                    if (response.success) {
+                        let data = response.data;
+                        let huyentt = $('#register_huyentt');
+                        huyentt.empty();
+                        huyentt.append($('<option></option>').val("0").text("Chọn huyện"));
+                        $.each(data, function (index, item) {
+                            huyentt.append($('<option></option>').val(item.Huyen_ID).text(item.Huyen_TenHuyen));
+                        });
+                        huyentt.prop('disabled', false);
+                    } else {
+                    }
+                },
+                error: function (xhr, status, error) {
+                    // Handle any errors
+                    console.error(error);
+                }
+            });
         });
     })
     function submitForm() {
@@ -431,16 +463,19 @@
                 </div>
                 <div class="col-md-3 col-12">
                     <div class="form-group">
-                        <label class="small mb-1" for="Huyen_ID">Quận/huyện*</label>
-                        @Html.DropDownList("Huyen_ID", null, htmlAttributes: new { @class = "form-select", @id = "register_huyentt" })
-                        <span id="register_huyentt_Error" class="small mb-1 text-danger"></span>
+                        <label class="small mb-1" for="Tinh_ID">Tỉnh/Thành phố*</label>
+                        @Html.DropDownList("Tinh_ID", null, htmlAttributes: new { @class = "form-select", @id = "register_tinhtt" })
+                        <span id="register_tinhtt_Error" class="small mb-1 text-danger"></span>
                     </div>
                 </div>
                 <div class="col-md-3 col-12">
                     <div class="form-group">
-                        <label class="small mb-1" for="Tinh_ID">Tỉnh/Thành phố*</label>
-                        @Html.DropDownList("Tinh_ID", null, htmlAttributes: new { @class = "form-select", @id = "register_tinhtt" })
-                        <span id="register_tinhtt_Error" class="small mb-1 text-danger"></span>
+                        <label class="small mb-1" for="Huyen_ID">Quận/huyện*</label>
+                        @*@Html.DropDownList("Huyen_ID", null, htmlAttributes: new { @class = "form-select", @id = "register_huyentt" })*@
+                        <select id="register_huyentt" class="form-select" disabled>
+                            <option value="0">Chọn huyện</option>
+                        </select>
+                        <span id="register_huyentt_Error" class="small mb-1 text-danger"></span>
                     </div>
                 </div>
             </div>
