--- a/Views/Auth/ActivationAccount.cshtml
+++ b/Views/Auth/ActivationAccount.cshtml
@@ -42,7 +42,7 @@
                             <div class="card-body text-center">
                                 <p id="resultMessage"></p>
                                 <div class="d-flex align-items-center justify-content-center mt-4 mb-2">
-                                    <input id="resultButton" class="btn btn-primary" type="submit" value="Về trang đăng nhập" disabled/>
+                                    <input id="resultButton" class="btn btn-primary" type="submit" href="@Url.Action("Index", "Auth")" value="Về trang đăng nhập" disabled/>
                                 </div>
                             </div>
                         </div>
