--- a/Views/Auth/ResetPassword.cshtml
+++ b/Views/Auth/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model AppXetTuyen.Models.ThiSinhDangKy
+﻿@model HDU_AppXetTuyen.Models.ThiSinhDangKy
 
 @{
     ViewBag.Title = "Đặt lại mật khẩu";
@@ -27,7 +27,7 @@
                                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                     <div class="mb-3">
                                         <label class="small mb-1" for="ThiSinh_CCCD">CMND/CCCD</label>
-                                        @Html.EditorFor(model => model.ThiSinh_CCCD, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nhập CMND/CCCD" } })
+                                        @Html.EditorFor(model => model.ThiSinh_CCCD, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nhập căn cước công dân" } })
                                         @Html.ValidationMessageFor(model => model.ThiSinh_CCCD, "", new { @class = "small mb-1 text-danger" })
                                     </div>
                                     <div class="mb-3" style="margin-top:5px">
@@ -39,11 +39,6 @@
                                         <label class="small mb-1" for="ThiSinh_MatKhau">Mật khẩu mới</label>
                                         @Html.EditorFor(model => model.ThiSinh_MatKhau, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nhập mật khẩu mới" } })
                                         @Html.ValidationMessageFor(model => model.ThiSinh_MatKhau, "", new { @class = "small mb-1 text-danger" })
-                                    </div>
-                                    <div class="mb-3" style="margin-top:5px">
-                                        <label class="small mb-1" for="ThiSinh_Re_MatKhau">Nhập lại mật khẩu</label>
-                                        @Html.EditorFor(model => model.ThiSinh_Re_MatKhau, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nhập lại mật khẩu" } })
-                                        @Html.ValidationMessageFor(model => model.ThiSinh_Re_MatKhau, "", new { @class = "small mb-1 text-danger" })
                                     </div>
                                     <div class="d-flex align-items-center justify-content-center mt-4 mb-0">
                                         <input class="btn btn-primary" type="submit" value="Tiếp tục" />
