--- a/Views/ThiSinhDangKies/Edit.cshtml
+++ b/Views/ThiSinhDangKies/Edit.cshtml
@@ -4,6 +4,9 @@
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 <script>
     $('document').ready(function () {
         loadData();
@@ -34,6 +37,11 @@
                 }
             });
         });
+        
+        $('#datepicker').datepicker({
+            format: 'dd/mm/yyyy', // Specify the desired date format
+            autoclose: true // Close the datepicker when a date is selected
+        });
     })
     function loadData() {
         $.ajax({
@@ -54,7 +62,7 @@
                     $('#ThiSinh_CCCD').val(data.ThiSinh_CCCD);
                     $('#ThiSinh_HoLot').val(data.ThiSinh_HoLot);
                     $('#ThiSinh_Ten').val(data.ThiSinh_Ten);
-                    $('#ThiSinh_NgaySinh').val(data.ThiSinh_NgaySinh);
+                    $('#datepicker').val(data.ThiSinh_NgaySinh);
                     $('#ThiSinh_DienThoai').val(data.ThiSinh_DienThoai);
                     $('#ThiSinh_Email').val(data.ThiSinh_Email);
                     $('#ThiSinh_DanToc').val(data.ThiSinh_DanToc);
@@ -191,123 +199,123 @@
             $('#ThiSinh_Email_Error').text(errorMessage);
             flag = false;
         }
-        if (!register_holot) {
+        if (!ThiSinh_HoLot) {
             var errorMessage = "Vui lòng nhập họ lót";
-            $('#register_holot_Error').text(errorMessage);
+            $('#ThiSinh_HoLot_Error').text(errorMessage);
             flag = false;
         }
-        if (!register_ten) {
+        if (!ThiSinh_Ten) {
             var errorMessage = "Vui lòng nhập tên";
-            $('#register_ten_Error').text(errorMessage);
+            $('#ThiSinh_Ten_Error').text(errorMessage);
             flag = false;
         }
-        if (!register_sdt) {
+        if (!ThiSinh_DienThoai) {
             var errorMessage = "Vui lòng nhập số điện thoại";
-            $('#register_sdt_Error').text(errorMessage);
+            $('#ThiSinh_DienThoai_Error').text(errorMessage);
             flag = false;
         }
-        if (!ngaysinh) {
+        if (!ThiSinh_NgaySinh) {
             var errorMessage = "Vui lòng chọn ngày sinh";
             $('#datepicker_Error').text(errorMessage);
             flag = false;
         }
-        if (!register_gt || register_gt == "3") {
+        if (!ThiSinh_GioiTinh) {
             var errorMessage = "Vui lòng chọn giới tính";
-            $('#register_gt_Error').text(errorMessage);
+            $('#ThiSinh_GioiTinh_Error').text(errorMessage);
             flag = false;
         }
-        if (!register_dantoc) {
+        if (!ThiSinh_DanToc) {
             var errorMessage = "Vui lòng nhập dân tộc";
-            $('#register_dantoc_Error').text(errorMessage);
+            $('#ThiSinh_DanToc_Error').text(errorMessage);
             flag = false;
         }
-        if (!register_kv) {
+        if (!KhuVuc_ID) {
             var errorMessage = "Vui lòng chọn khu vực";
-            $('#register_kv_Error').text(errorMessage);
+            $('#KhuVuc_ID_Error').text(errorMessage);
             flag = false;
         }
-        if (!register_truong) {
+        if (!ThiSinh_TruongCapBa) {
             var errorMessage = "Vui lòng nhập tên trường";
-            $('#register_truong_Error').text(errorMessage);
+            $('#ThiSinh_TruongCapBa_Error').text(errorMessage);
             flag = false;
         }
-        if (!register_ma_truong) {
+        if (!ThiSinh_TruongCapBa_Ma) {
             var errorMessage = "Vui lòng nhập mã trường";
-            $('#register_ma_truong_Error').text(errorMessage);
+            $('#ThiSinh_TruongCapBa_Ma_Error').text(errorMessage);
             flag = false;
         }
-        if (!register_truongtinh || register_truongtinh == 0) {
+        if (!Tinh_ID || Tinh_ID == 0) {
             var errorMessage = "Vui lòng chọn tỉnh/thành phố";
-            $('#register_truongtinh_Error').text(errorMessage);
+            $('#Tinh_ID_Error').text(errorMessage);
             flag = false;
         }
-        if (!register_phuongtt) {
+        if (!ThiSinh_HoKhauThuongTru) {
             var errorMessage = "Vui lòng nhập phường/xã";
-            $('#register_phuongtt_Error').text(errorMessage);
+            $('#ThiSinh_HoKhauThuongTru_Error').text(errorMessage);
             flag = false;
         }
-        if (!register_huyentt || register_huyentt == 0) {
+        if (!Huyen_ID || Huyen_ID == 0) {
             var errorMessage = "Vui lòng chọn quận/huyện";
-            $('#register_huyentt_Error').text(errorMessage);
+            $('#Huyen_ID_Error').text(errorMessage);
             flag = false;
         }
-        if (!register_tinhtt || register_tinhtt == 0) {
-            var errorMessage = "Vui lòng chọn tỉnh/thành phố";
-            $('#register_tinhtt_Error').text(errorMessage);
-            flag = false;
-        }
-        if (!register_diachi) {
+        if (!ThiSinh_DCNhanGiayBao) {
             var errorMessage = "Vui lòng nhập địa chỉ liên hệ";
-            $('#register_diachi_Error').text(errorMessage);
+            $('#ThiSinh_DCNhanGiayBao_Error').text(errorMessage);
             flag = false;
         }
-        if (!flag) return;
+        console.log(flag)
+        /*if (!flag) return;*/
 
-        let hokhautt = register_phuongtt + ", " + $('#Huyen_ID option:selected').text() + ", " + $('#Tinh_ID option:selected').text();
+        let hokhautt = ThiSinh_HoKhauThuongTru + ", " + $('#Huyen_ID option:selected').text() + ", " + $('#Tinh_ID option:selected').text();
         let formData = {
-            ThiSinh_CCCD: register_CCCD,
-            ThiSinh_MatKhau: register_password,
-            ThiSinh_HoLot: register_holot,
-            ThiSinh_Ten: register_ten,
-            ThiSinh_DienThoai: register_sdt,
-            ThiSinh_Email: register_email,
-            ThiSinh_NgaySinh: ngaysinh,
-            ThiSinh_DanToc: register_dantoc,
-            ThiSinh_GioiTinh: register_gt,
-            ThiSinh_DCNhanGiayBao: register_diachi,
+            ThiSinh_CCCD: ThiSinh_CCCD,
+            ThiSinh_HoLot: ThiSinh_HoLot,
+            ThiSinh_Ten: ThiSinh_Ten,
+            ThiSinh_DienThoai: ThiSinh_DienThoai,
+            ThiSinh_Email: ThiSinh_Email,
+            ThiSinh_NgaySinh: ThiSinh_NgaySinh,
+            ThiSinh_DanToc: ThiSinh_DanToc,
+            ThiSinh_GioiTinh: ThiSinh_GioiTinh,
+            ThiSinh_DCNhanGiayBao: ThiSinh_DCNhanGiayBao,
             ThiSinh_HoKhauThuongTru: hokhautt,
-            KhuVuc_ID: register_kv,
-            DoiTuong_ID: register_doituong,
-            ThiSinh_TruongCapBa_Ma: register_ma_truong,
-            ThiSinh_TruongCapBa: register_truong,
-            ThiSinh_TruongCapBa_Tinh_ID: register_truongtinh,
+            KhuVuc_ID: KhuVuc_ID,
+            DoiTuong_ID: DoiTuong_ID,
+            ThiSinh_TruongCapBa_Ma: ThiSinh_TruongCapBa_Ma,
+            ThiSinh_TruongCapBa: ThiSinh_TruongCapBa,
         }
+        console.log(formData)
         $.ajax({
-            url: "/Auth/Register",
+            url: "/ThiSinhDangKies/UpdateInfo",
             type: "POST",
             data: JSON.stringify(formData),
             contentType: "application/json;charset=utf-8",
             success: function (response) {
                 console.log(response)
                 if (response.success) {
-                    showToast("Thành công", "Đăng kí tài khoản thành công! Vui lòng kích hoạt tài khoản theo đường link gửi qua email!", "bg-success");
-                    $('#signupForm').hide();
-                    $('#loginForm').show();
-                    $("#rightPanel").removeClass("col-lg-7").addClass("col-lg-5");
-                    $("#leftPanel").removeClass("col-lg-5").addClass("col-lg-7");
+                    showToast("Thành công", "Cập nhật thông tin thành công!", "bg-success");
                 } else {
                     $('#errorMessage').text(response.message);
-                    showToast("Thất bại", "Đăng kí tài khoản thất bại! Vui lòng thử lại!", "bg-error");
+                    showToast("Thất bại", "Cập nhật thông tin thất bại! Vui lòng thử lại!", "bg-error");
                 }
             },
             error: function (xhr, status, error) {
-                showToast("Thất bại", "Đăng kí tài khoản thất bại! Vui lòng thử lại!", "bg-error");
+                showToast("Thất bại", "Cập nhật thông tin thất bại! Vui lòng thử lại!", "bg-error");
             },
             complete: function () {
-                // Hide the loading modal
-                $('#loadingModal').modal('hide');
             }
         });
+    }
+    function validateEmail(email) {
+        var emailRegex = /^[^\s@@]+@@[^\s@@]+\.[^\s@@]+$/;
+        var isValid = emailRegex.test(email);
+        return isValid;
+    }
+    function showToast(title, message, bgColor) {
+        $("#myToast .toast-header .me-auto").text(title);
+        $("#myToast .toast-body").text(message);
+        $("#myToast .toast").removeClass("bg-success bg-danger").addClass(bgColor);
+        $("#myToast").toast("show");
     }
 </script>
 <div class="container-fluid px-12">
@@ -330,44 +338,43 @@
                     </div>
                     <div class="col-md-3">
                         <label class="form-label mb-1" for="ThiSinh_NgaySinh">Ngày sinh <a style="color:red; text-decoration:none">(*)</a> </label>
-                        <input class="form-control" id="ThiSinh_NgaySinh" type="text" placeholder="Ngày sinh" value="" />
+                        <input class="form-control" id="datepicker" type="text" placeholder="Ngày sinh" value="" />
                     </div>
                 </div>
                 <div class="row gx-xxl-3 mb-1">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <label class="form-label mb-1" for="ThiSinh_GioiTinh">Giới tính <a style="color:red; text-decoration:none">(*)</a> </label>
                         <select class="form-select" id="ThiSinh_GioiTinh" type="text" placeholder="Giới tính"></select>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <label class="form-label mb-1" for="ThiSinh_DienThoai">Điện thoại <a style="color:red; text-decoration:none">(*)</a> </label>
                         <input class="form-control" id="ThiSinh_DienThoai" type="text" placeholder="Điện thoại" value="" />
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <label class="form-label mb-1" for="ThiSinh_Email">Emai <a style="color:red; text-decoration:none">(*)</a> </label>
                         <input class="form-control" id="ThiSinh_Email" type="text" placeholder="Email" value="" />
                     </div>
+                    <div class="col-md-3">
+                        <label class="form-label mb-1" for="ThiSinh_DanToc">Dân tộc <a style="color:red; text-decoration:none">(*)</a> </label>
+                        <input class="form-control" id="ThiSinh_DanToc" type="text" placeholder="Dân tộc" value="" />
+                    </div>
                 </div>
                 <div class="row gx-xxl-3 mb-1">
-                    <div class="col-md-2">
+                    <div class="col-md-3">
                         <label class="form-label mb-1" for="KhuVuc_ID">Khu vực <a style="color:red; text-decoration:none">(*)</a> </label>
                         <select class="form-select" id="KhuVuc_ID" type="text" placeholder="Giới tính"></select>
                     </div>
 
-                    <div class="col-md-2">
+                    <div class="col-md-3">
                         <label class="form-label mb-1" for="DoiTuong_ID">Đối tượng <a style="color:red; text-decoration:none">(*)</a> </label>
                         <select class="form-select" id="DoiTuong_ID" type="text" placeholder="Giới tính"></select>
                     </div>
-
-                    <div class="col-md-2">
-                        <label class="form-label mb-1" for="ThiSinh_DanToc">Dân tộc <a style="color:red; text-decoration:none">(*)</a> </label>
-                        <input class="form-control" id="ThiSinh_DanToc" type="text" placeholder="Dân tộc" value="" />
-                    </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <label class="form-label mb-1" for="ThiSinh_TruongCapBa">Trường<a style="color:red; text-decoration:none">(*)</a> </label>
                         <input class="form-control" id="ThiSinh_TruongCapBa" type="text" placeholder="Trường THPT" value="" />
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-3">
                         <label class="form-label mb-1" for="ThiSinh_TruongCapBa_Ma">Mã trường<a style="color:red; text-decoration:none">(*)</a> </label>
                         <input class="form-control" id="ThiSinh_TruongCapBa_Ma" type="text" placeholder="Mã trường" value="" />
                     </div>
@@ -409,6 +416,16 @@
         </div>
     </div>
     <a class="btn btn-warning mt-2" href="@Url.Action("Index", "ThiSinhDangKies")">Quay lại</a>
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="myToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <strong class="me-auto">Toast Title</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+            </div>
+        </div>
+    </div>
 </div>
 
 @section Scripts {
