--- a/Views/NCDangKyXetTuyens/Index.cshtml
+++ b/Views/NCDangKyXetTuyens/Index.cshtml
@@ -102,7 +102,7 @@
                         <div class="col-xxl-12" style="text-align:center">
                             <a href="#" class="btn btn-sm btn-primary mb-2">Thêm mới nguyện vọng</a>
                             <a href="#" class="btn btn-sm btn-primary  mb-2">Gửi minh chứng nộp lệ phí</a>
-                            <a href="#" class="btn btn-sm btn-primary  mb-2">In phiếu tổng hợp xet tuyển</a>
+                           <button id="downButton" class="btn btn-sm btn-primary  mb-2"> In phiếu tổng hợp xét tuyển </button> 
                             <div class="row">
                                 <div class="col-12">
 
@@ -309,3 +309,32 @@
 
     </tbody>
 *@
+
+<script>
+
+        $(document).ready(function () {
+        $('#downButton').click(function () {
+            window.location.href = '/ExportFile/DownloadFile_XetTuyenHB/1';
+        });
+    });
+
+    @*function DownloadFile_XetTuyenHB(value) {
+        var obj = { idThiSinh: value };
+        $.ajax({
+            url: '@Url.Action("DownloadFile_XetTuyenHB", "ExportFile")',
+            type: 'POST',
+            dataType: 'json',
+            data: JSON.stringify(obj),
+            contentType: 'application/json; charset=utf-8'
+        }).done(function (response) {
+            if (response.status == true) {
+                alert(response.msg);
+            }
+            else {
+                alert(response.msg);
+            }
+        }).fail(function (error) {
+            alert(error.StatusText);
+        });
+    }*@
+</script>
