--- a/Views/DangKyXetTuyens/dkxthocba.cshtml
+++ b/Views/DangKyXetTuyens/dkxthocba.cshtml
@@ -13,7 +13,54 @@
     }
 </style>
 
+<script>
+    $(document).ready(function () {
+        dkxt_get_data_da_dkxt_all();
+    });
+    function dkxt_get_data_da_dkxt_all() {
+        let _output = "";
+        $.ajax({
+            url: "/DangKyXetTuyens/dkxthocbaListAll/",
+            type: 'GET',
+            contentType: 'application/json;charset=utf-8',
+            dataType: 'json',
+            success: function (result_all) {
+                // console.log(result_all)
+                if (result_all.length == 0) {
+                    _output += '<tr><td colspan="5">Chưa chọn dữ liệu ngành và tổ hợp môn</td></tr>';
+                }
+                else {
+                    $.each(result_all, function (i, result) {
 
+                        _output += '<tr>' +
+
+                            '<td style="vertical-align: middle !important "> ' + result.Dkxt_TenAll.Nganh_GhiChu + ' </td>' +
+                            '<td style="vertical-align: middle !important ">' + result.Dkxt_TenAll.Thm_MaTen + '</td>' +
+                            '<td style="vertical-align: middle !important ">' + result.Dkxt_Diem_Tong_Full + '</td>' +
+                            '<td style="vertical-align: middle !important "> NV ' + result.Dkxt_NguyenVong + ' <a class="btn btn-light btn-sm">&#8743;</a>  <a class="btn btn-light btn-sm">&#8744;</a> </td>' +
+                            '<td>' + '<a href="#" class="btn btn-light" style="vertical-align: middle !important "> <input type="checkbox" checked disabled /> Đã xác thực đăng ký</a>' + '</td>' +
+                            '<td style="text-align: center; vertical-align: middle !important ">' +
+                            'Sửa | Xóa' +
+                            '</td>' +
+                            '</tr>'
+                    });
+                }
+                document.getElementById('tbody_list_nguyenvong').innerHTML = _output;
+            },
+            error: function (errormessage) {
+                alert(errormessage.responseText);
+            }
+        });
+    }
+    function dkxt_add_data_show_div_add() {
+        document.getElementById('fadeinup_update_dkxt').style.display = "inline";
+        get_data_khoinganh_all(0, 0, 0);
+        //$('#fadeinup_update_dkxt').st
+    }
+
+    
+
+</script>
 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
     <div class="container-fluid px-4">
         <div class="page-header-content">
@@ -22,7 +69,6 @@
                     <h1 class="page-header-title  mb-2">
                         <div class="page-header-icon"><i data-feather="list"></i></div>
                         Xét tuyển sử dụng kết quả học tập ở THPT
-
                     </h1>
                 </div>
 
@@ -46,7 +92,6 @@
                             <table class="table table-hover">
                                 <thead>
                                     <tr>
-                                        <th style="vertical-align:middle;">Khối ngành</th>
                                         <th style="vertical-align:middle;">Mã ngành - Ngành</th>
                                         <th style="vertical-align:middle;">Tổ hợp môn xét tuyển</th>
                                         <th style="vertical-align:middle;">Tổng điểm</th>
@@ -56,58 +101,14 @@
                                     </tr>
                                 </thead>
                                 <tbody id="tbody_list_nguyenvong">
-                                    @*<tr><td colspan="5">Chưa chọn dữ liệu ngành và tổ hợp môn</td></tr>*@
-                                    <tr>
-                                        <td>Khối ngành kinh tế kỹ thuật</td>
-                                        <td> 7340101 - Quản trị kinh doanh </td>
-                                        <td>(A00): Toán-Lý-Hóa</td>
-                                        <td>21.5</td>
-                                        <td>NV 1 <a class="btn btn-light btn-sm">&#8743;</a>  <a class="btn btn-light btn-sm">&#8744;</a> </td>
-                                        <td>
-                                            <a href="#" class="btn btn-light"> <input type="checkbox" checked disabled /> Đã xác thực đăng ký</a>
-                                        </td>
-                                        <td style="text-align: center; vertical-align: middle !important ">
-                                            Sửa | Xóa
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>Khối ngành kinh tế kỹ thuật</td>
-                                        <td>7340201 - Tài chính-Ngân hàng</td>
-                                        <td>(A00): Toán-Lý-Hóa</td>
-                                        <td>22.5</td>
-                                        <td>NV 2 <a class="btn btn-light btn-sm">&#8743;</a>  <a class="btn btn-light btn-sm">&#8744;</a> </td>
-                                        <td>
-                                            <a href="#" class="btn btn-light"> <input type="checkbox" checked disabled /> Đã xác thực đăng ký</a>
-                                        </td>
-                                        <td style="text-align: center; vertical-align: middle !important ">
-                                            Sửa | Xóa
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>Khối ngành sư phạm</td>
-                                        <td>7140231 - Sư phạm Tiếng Anh</td>
-                                        <td>(D00): Toán-Văn-Anh</td>
-                                        <td>28.5</td>
-                                        <td>NV 3 <a class="btn btn-light btn-sm">&#8743;</a>  <a class="btn btn-light btn-sm">&#8744;</a> </td>
-                                        <td>
-                                            <a href="#" class="btn btn-light" style="color:red"> <input type="checkbox" disabled /> Chưa xác nhận đăng ký</a>
-                                        </td>
-                                        <td style="text-align: center; vertical-align: middle !important ">
-                                            <a href="#">Sửa</a> | <a href="#">Xóa</a>
-                                        </td>
-                                    </tr>
                                 </tbody>
                             </table>
                         </div>
                         <div class="col-xxl-12" style="text-align:center">
-                            <a href="#" class="btn btn-sm btn-primary mb-2">Thêm mới nguyện vọng</a>
+                            <a href="#" class="btn btn-sm btn-primary mb-2" onclick="dkxt_add_data_show_div_add()">Thêm mới nguyện vọng</a>
                             <a href="#" class="btn btn-sm btn-primary  mb-2">Gửi minh chứng nộp lệ phí</a>
-                            <a href="#" class="btn btn-sm btn-primary  mb-2">In phiếu tổng hợp xet tuyển</a>
-                            <div class="row">
-                                <div class="col-12">
+                            <a href="#" class="btn btn-sm btn-primary  mb-2">In phiếu tổng hợp nguyện vọng</a>
 
-                                </div>
-                            </div>
                         </div>
                         <div class="col-xxl-12">
                             <p style="color:red; font-style:italic" class="mb-1">Lưu ý: </p>
@@ -121,7 +122,49 @@
             </div>
         </div>
     </div>
-    <div id="fadeInUp" style="display: none">
+   
+    <script>
+        function get_data_khoinganh_all(khoinganh_key, nganh_key, tohopmon_key) {
+            $('#select_khoinganh').empty()
+            $.ajax({
+                url: "/ThiSinhDangKys/tsdkttts_get_tinh_all",
+                type: "GET",
+                contentType: "application/json;charset=utf-8",
+                dataType: "json",
+                success: function (result_all) {
+                    $.each(result_all, function (i, result) {
+                        $('#qtht_select_tinh_lop_all').append('<option value="' + result.Tinh_ID + '">' + result.Tinh_MaTen + '</option>');
+                    });
+                    $('#qtht_select_tinh_lop_all').val(key_tinh);
+                    get_data_truong_all(key_tinh, key_truong);
+
+                },
+                error: function (errormessage) {
+                    alert(errormessage.responseText);
+                }
+            });
+        }
+        function get_data_truong_all(id, key_truong) {
+            $("#qtht_select_truong_lop_all").empty();
+            $.ajax({
+                url: "/ThiSinhDangKys/tsdkttts_get_truong_all/" + id,
+                type: 'GET',
+                contentType: 'application/json;charset=utf-8',
+                dataType: 'json',
+                success: function (result_all) {
+                    /*    console.log(result_all)*/
+                    $.each(result_all, function (i, result) {
+                        $('#qtht_select_truong_lop_all').append('<option value="' + result.Truong_ID + '">' + result.Truong_MaTen + '</option>');
+                    });
+                    $('#qtht_select_truong_lop_all').val(key_truong);
+                },
+                error: function (errormessage) {
+                    alert(errormessage.responseText);
+                }
+            });
+        }
+    </script>
+    <div id="fadeinup_update_dkxt" style="display: none">
         <div class="card card-collapsable mt-1 mb-1">
             <a class="card-header" href="#collapse_div_dangkynvmoi" data-bs-toggle="collapse" role="button" aria-expanded="true" aria-controls="collapse_div_dangkynvmoi">
                 Đăng ký nguyện vọng mới
@@ -137,7 +180,6 @@
                                 <thead>
                                     <tr>
                                         <th colspan="2">Chọn ngành và tổ hợp môn</th>
-
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -183,12 +225,37 @@
                                             </tr>
                                         </thead>
                                         <tbody id="tbody_list_diemmonhoc">
-                                           
+                                            <tr>
+                                                <td>Toán</td>
+                                                <td><input type="number" class="form-control" value="0" /></td>
+                                                <td><input type="number" class="form-control" value="0" /></td>
+                                                <td><input type="number" class="form-control" value="0" /></td>
+                                                <td><label type="number" class="form-control">0</label> </td>
+                                            </tr>
+                                            <tr>
+                                                <td>Lý</td>
+                                                <td><input type="number" class="form-control" value="0" /></td>
+                                                <td><input type="number" class="form-control" value="0" /></td>
+                                                <td><input type="number" class="form-control" value="0" /></td>
+                                                <td><label type="number" class="form-control">0</label> </td>
+                                            </tr>
+                                            <tr>
+                                                <td>Hóa</td>
+                                                <td><input type="number" class="form-control" value="0" /></td>
+                                                <td><input type="number" class="form-control" value="0" /></td>
+                                                <td><input type="number" class="form-control" value="0" /></td>
+                                                <td><label type="number" class="form-control">0</label> </td>
+                                            </tr>
                                         </tbody>
                                     </table>
                                 </div>
                             </div>
-                            <div id="div_thongtinphu_upload" style="display: none">
+                            <div id="div_thongtinphu_upload">
+                                <div class="row mb-3">
+                                    <div class="col-xxl-4">
+
+                                    </div>
+                                </div>
                                 <div class="row mb-3">
                                     <div class="col-xxl-4">
                                         <div class="form-group mb-2">
@@ -224,11 +291,11 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-xxl-12" style="text-align:center">
-                                        <input class="btn btn-primary" type="button" value="Đồng ý" />
+                                        <input class="btn btn-primary" type="button" value="Đồng ý" onclick="" />
                                         <input class="btn btn-secondary" type="button" value="Hủy bỏ" />
                                     </div>
                                 </div>
-                            </div> 
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -284,29 +351,29 @@
 *@
 @*
 
-    <tbody id="tbody_list_diemmonhoc">
- <tr><td colspan="5">Chưa chọn dữ liệu ngành và tổ hợp môn</td></tr>
-<tr>
-    <td>Toán</td>
-    <td><input type="number" class="form-control" value="0" /></td>
-    <td><input type="number" class="form-control" value="0" /></td>
-    <td><input type="number" class="form-control" value="0" /></td>
-    <td><label type="number" class="form-control">0</label> </td>
-</tr>
-<tr>
-    <td>Lý</td>
-    <td><input type="number" class="form-control" value="0" /></td>
-    <td><input type="number" class="form-control" value="0" /></td>
-    <td><input type="number" class="form-control" value="0" /></td>
-    <td><label type="number" class="form-control">0</label> </td>
-</tr>
-<tr>
-    <td>Hóa</td>
-    <td><input type="number" class="form-control" value="0" /></td>
-    <td><input type="number" class="form-control" value="0" /></td>
-    <td><input type="number" class="form-control" value="0" /></td>
-    <td><label type="number" class="form-control">0</label> </td>
-</tr>
+        <tbody id="tbody_list_diemmonhoc">
+     <tr><td colspan="5">Chưa chọn dữ liệu ngành và tổ hợp môn</td></tr>
+    <tr>
+        <td>Toán</td>
+        <td><input type="number" class="form-control" value="0" /></td>
+        <td><input type="number" class="form-control" value="0" /></td>
+        <td><input type="number" class="form-control" value="0" /></td>
+        <td><label type="number" class="form-control">0</label> </td>
+    </tr>
+    <tr>
+        <td>Lý</td>
+        <td><input type="number" class="form-control" value="0" /></td>
+        <td><input type="number" class="form-control" value="0" /></td>
+        <td><input type="number" class="form-control" value="0" /></td>
+        <td><label type="number" class="form-control">0</label> </td>
+    </tr>
+    <tr>
+        <td>Hóa</td>
+        <td><input type="number" class="form-control" value="0" /></td>
+        <td><input type="number" class="form-control" value="0" /></td>
+        <td><input type="number" class="form-control" value="0" /></td>
+        <td><label type="number" class="form-control">0</label> </td>
+    </tr>
 
-</tbody>
+    </tbody>
 *@
