--- a/Views/ThiSinhDangKies/Edit.cshtml
+++ b/Views/ThiSinhDangKies/Edit.cshtml
@@ -48,7 +48,7 @@
             url: "/ThiSinhDangKies/GetThiSinhInfo",
             type: "POST",
             data: JSON.stringify({
-                id: @Model.ThiSinh_ID
+                id: @Model.ThiSinh_ID,
             }),
             contentType: "application/json;charset=utf-8",
             success: function (response) {
