#update site admin

--- a/Areas/Admin/Views/DangKyXetTuyens/Index.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/Index.cshtml
@@ -13,7 +13,7 @@
                 <div class="col-auto mb-1">
                     <h1 class="page-header-title mb-2">
                         <div class="page-header-icon"><i data-feather="list"></i></div>
-                        Ngành
+                        Đăng ký xét tuyển
                     </h1>
                 </div>
                 <div class="col-12 col-xl-auto mb-3">
