--- a/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
@@ -96,6 +96,8 @@
                         </a>
                         <div class="collapse" id="collapseDashboards" data-bs-parent="#accordionSidenav">
                             <nav class="sidenav-menu-nested nav accordion" id="accordionSidenavPages">
+                                <a class="nav-link" href="@Url.Action("Index", "PhuongThucXetTuyens")">Phương thức xét tuyển</a>
+                                <a class="nav-link" href="@Url.Action("Index", "DotXetTuyens")">Đợt xét tuyển</a>
                                 <a class="nav-link" href="@Url.Action("Index", "Tinhs")">
                                     Tỉnh thành
                                     @*<span class="badge bg-primary-soft text-primary ms-auto">Updated</span>*@
