--- a/Views/DangKyXetTuyens/iddkxthocba.cshtml
+++ b/Views/DangKyXetTuyens/iddkxthocba.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<HDU_AppXetTuyen.Models.DangKyXetTuyen>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "dkxthocba";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>dkxthocba</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
