--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
                             <div class="nav-link-icon"><i data-feather="activity"></i></div>
                             Thông tin thí sinh
                         </a>
-                        <a class="nav-link" href="@Url.Action("Create", "DangKyXetTuyens")">
+                        <a class="nav-link" href="@Url.Action("dkxthocba", "DangKyXetTuyens")">
                             <div class="nav-link-icon"><i data-feather="grid"></i></div>
                             Đăng ký xét tuyển
                         </a>
